feat: archive virtual filesystem, parent nav, search UI improvements
- Archive files (.zip, .7z, .tar, .rar, etc.) open as virtual directories
  on double-click via ArchiveManager actor with temp dir extraction
- ".." parent directory entry at top of every file panel
- Archive-aware navigation: ".." at archive root exits and repacks if dirty
- Dark navy blue coloring for archive search results
- Double-click search result inside archive extracts and navigates into it
- 50+ archive formats supported (zip, 7z, rar, tar.*, dmg, iso, jar, deb...)
- Fallback strategy: unzip → tar(libarchive) → 7z
- Automatic dirty tracking and repacking with attribute preservation

New files:
  - ArchiveManager.swift (actor, extraction/repacking/session lifecycle)
  - ArchiveNavigationState.swift (per-panel state + ArchiveExtensions enum)
  - ParentDirectoryEntry.swift (synthetic ".." CustomFile factory)

Modified:
  - AppState: archive states, enterArchive/exitArchive/navigateToParent
  - CustomFile: +isParentEntry, +isArchiveFile
  - FilePanelView: archive-aware double-click, ".." prepending
  - FileRowView: arrow icon and dark blue color for ".."
  - FileRow: simplified container for ".." (no drag-drop/context menu)
  - FindFilesResultsView: dark navy blue for archive results, 📦 prefix
  - FindFilesViewModel: goToFile extracts archives then navigates
  - ArchiveService/ArchiveFormat: extended to 13 format cases

--- a/GUI/Resources/Localizable.xcstrings
+++ b/GUI/Resources/Localizable.xcstrings
@@ -7,6 +7,9 @@
     "—" : {
 
     },
+    ".." : {
+
+    },
     "... and %lld more" : {
 
     },
@@ -1172,6 +1175,9 @@
           }
         }
       }
+    },
+    "Navigate to parent directory" : {
+
     },
     "Navigation between favorites - %@" : {
 
