Fix: remove auto-scroll on selection change
List no longer jumps to center the selected file on click.
Scroll position is fully controlled by the user.

--- a/GUI/Resources/Localizable.xcstrings
+++ b/GUI/Resources/Localizable.xcstrings
@@ -123,6 +123,9 @@
         }
       }
     },
+    "%lld items selected" : {
+
+    },
     "%lld marked" : {
       "comment" : "Marked files count"
     },
@@ -197,6 +200,9 @@
           }
         }
       }
+    },
+    "and %lld more" : {
+
     },
     "App Store..." : {
 
