Fix right-click menu on empty panel space
ZStack layout was blocking contextMenu on empty panel area because
ScrollView on top absorbed all mouse events.

Fix: remove ZStack, place contextMenu directly on ScrollView and on
a visible (0.01 opacity) filler area below file rows. Left-click on
empty space now deselects current file.

--- a/GUI/Resources/Localizable.xcstrings
+++ b/GUI/Resources/Localizable.xcstrings
@@ -525,6 +525,9 @@
     "Delete %lld files?" : {
       "comment" : "Confirm batch delete"
     },
+    "Delete source files after packing" : {
+
+    },
     "Delete?" : {
       "comment" : "Delete confirmation dialog title",
       "localizations" : {
