UI:  inline panel filter bar dark pill, white text, blue focus ring, × clear button, history dropdown
feat: inline panel filter bar with persistent history (16 entries) in status bar
fix: CustomFile.name → nameStr in filter query
refactor: PanelFilterBar → NSComboBox, pale-yellow bg, blue focus ring, history dropdown
UI: filter combobox saturated yellow bg, dark placeholder, blue border+shadow, height 28
UI: filter bar HIG-style, system bg, blue focus ring, history popover with per-item delete

--- a/GUI/Resources/Localizable.xcstrings
+++ b/GUI/Resources/Localizable.xcstrings
@@ -817,6 +817,9 @@
     "File Name Pattern Syntax" : {
       "comment" : "Pattern help title"
     },
+    "Filter" : {
+
+    },
     "Filter by date" : {
       "comment" : "Date filter toggle"
     },
@@ -1316,6 +1319,9 @@
     },
     "Regex" : {
       "comment" : "Regex toggle"
+    },
+    "Remove from history" : {
+
     },
     "Rename" : {
       "comment" : "Rename button",
