schlüss gür Heute!

--- a/GUI/Resources/Localizable.xcstrings
+++ b/GUI/Resources/Localizable.xcstrings
@@ -1207,6 +1207,12 @@
     "Navigation History" : {
 
     },
+    "Network Neighborhood" : {
+
+    },
+    "Network Neighborhood button" : {
+
+    },
     "New Folder" : {
       "comment" : "Default new folder name",
       "localizations" : {
