--- a/GUI/Resources/Localizable.xcstrings
+++ b/GUI/Resources/Localizable.xcstrings
@@ -1201,7 +1201,7 @@
         }
       }
     },
-    "Navigation between favorites - %@" : {
+    "Navigation between favorites — %@" : {
 
     },
     "Navigation History" : {
