fix: column separators visible again — 1pt width, remove dead ColumnWidthStorage
- ColumnSeparatorStyle.width: 0.5→1.0pt (separators were invisible at 0.5pt)
- ColumnSeparatorStyle.activeWidth: 1.0→2.0pt
- Remove dead ColumnWidthStorage struct (superseded by ColumnLayoutModel)
- Remove dead columnStorage property in FileTableView
- Remove no-op loadColumnWidths() and its onAppear call
- Remove unused TableColumnDefaults.size/date/type/permissions/owner constants
- FileRow.swift: rowContent padding comment clarified (no logic change)

--- a/GUI/Resources/Localizable.xcstrings
+++ b/GUI/Resources/Localizable.xcstrings
@@ -1207,12 +1207,6 @@
     "Navigation History" : {
 
     },
-    "Network Neighborhood" : {
-
-    },
-    "Network Neighborhood button" : {
-
-    },
     "New Folder" : {
       "comment" : "Default new folder name",
       "localizations" : {
@@ -1417,6 +1411,9 @@
 
     },
     "Reset to Defaults" : {
+
+    },
+    "Restore Defaults" : {
 
     },
     "Reveal in Finder" : {
